--- a/PetWatch/PetWatchApp/templates/PetWatch/watch.html
+++ b/PetWatch/PetWatchApp/templates/PetWatch/watch.html
@@ -19,4 +19,35 @@
 
 <!-- content -->
 {% block content %}
+    <center>
+        <h1>Available Locations</h1>
+        <table class="table table-striped table-hover">
+            <thead class="thead-dark">
+                <tr>
+                    <th style='text-align:center'>Owner</th>
+                    <th style='text-align:center'>Type</th>
+                    <th style='text-align:center'>Square Footage</th>
+                    <th style='text-align:center'>Number of Occupants</th>
+                    <th style='text-align:center'>Location has kids?</th>
+                    <th style='text-align:center'>Location has a fence?</th>
+                    <th style='text-align:center'>Location has other pets?</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for location in locations %}
+                <tr>
+                    <td style='min-width:200px; text-align:center'>{{ location.LOCATION_OWNER_USER_ID }}</td>
+                    <td style='min-width:200px; text-align:center'>{{ location.LOCATION_TYPE }}</td>
+                    <td style='min-width:200px; text-align:center'>{{ location.LOCATION_SIZE }}</td>
+                    <td style='min-width:200px; text-align:center'>{{ location.LOCATION_NUMBER_OF_OCCUPANTS }}</td>
+                    <td style='min-width:200px; text-align:center'>{{ location.LOCATION_HAS_KIDS }}</td>
+                    <td style='min-width:200px; text-align:center'>{{ location.LOCATION_HAS_FENCE }}</td>
+                    <td style='min-width:200px; text-align:center'>{{ location.LOCATION_HAS_PETS }}</td>
+                    <td><button class="submit">Book Now!</button></td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </center>
+
 {% endblock %}
