--- a/PetWatch/PetWatchApp/templates/PetWatch/index.html
+++ b/PetWatch/PetWatchApp/templates/PetWatch/index.html
@@ -128,7 +128,7 @@
           </div>
         </div>
         <div class="item">
-          <img class="third-slide" src="../../static/PetWatch/images/IMG_2.JPEG" alt="Third slide">
+          <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
               <h1>Freedom <i>Realized</i></h1>
